--- a/index.html
+++ b/index.html
@@ -17,9 +17,11 @@
 		<div class="card-ind">
 			<h1> Hello! My name is Alexander✋ Welcome to my page</H1>
 			<img src="images/IMG_1429.JPG" alt="Alexander Lebedev">
-			<a href="http://www.electricboogiewoogie.com/" target="_blank" id="head-btn"> Check this out! </a>
+			<div class="btn-container">
+				<a href="http://www.electricboogiewoogie.com/" target="_blank" id="head-btn"> Check this out! </a>
+			</div>
 		</div>
-		
+	
 		<div class="card-ind">
 			<h2> About me🧐</h2>
 			<p>
@@ -56,9 +58,8 @@
 			
 		<div class="card-ind">
 			<h3> View my social media accounts </h3>
-
-			<p>
-				<ul class="icons-inline"> 
+		
+			<ul class="icons-inline"> 
 					<li>
 						<a href="https://www.linkedin.com/in/alexander-lebedev-47b1021a2/" target="_blank"> <i class="fab fa-linkedin"></i > </a>
 					</li>
@@ -66,7 +67,7 @@
 						<a href="https://www.instagram.com/lebedev_sasha/" target="_blank"> <i class="fab fa-instagram-square"></i> </a>
 					</li>				
 				</ul>
-		 	</p>
+		 	
 		</div>
 		
 	</div>
